tests/errors/preprocessor/incorrect/after_preproces_words_must_be_space_2.c
#define KEK 1 #define KE 1

int main ()
{
	return 0;
}